@@ -1,39 +1,35 @@
 package com.dotcms.rendering.velocity.viewtools.navigation;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
-
 import com.dotcms.IntegrationTestBase;
 import com.dotcms.api.web.HttpServletRequestThreadLocal;
-import com.dotcms.datagen.ContentletDataGen;
-import com.dotcms.datagen.FileAssetDataGen;
-import com.dotcms.datagen.FolderDataGen;
-import com.dotcms.datagen.HTMLPageDataGen;
-import com.dotcms.datagen.SiteDataGen;
-import com.dotcms.datagen.TemplateDataGen;
-import com.dotcms.datagen.TestDataUtils;
+import com.dotcms.datagen.*;
 import com.dotcms.util.IntegrationTestInitService;
 import com.dotmarketing.beans.Host;
 import com.dotmarketing.beans.Identifier;
 import com.dotmarketing.business.APILocator;
-import com.dotmarketing.business.CacheLocator;
+import com.dotmarketing.business.IdentifierAPI;
+import com.dotmarketing.business.VersionableAPI;
 import com.dotmarketing.exception.DotDataException;
 import com.dotmarketing.exception.DotSecurityException;
+import com.dotmarketing.factories.WebAssetFactory;
+import com.dotmarketing.portlets.contentlet.business.ContentletAPI;
 import com.dotmarketing.portlets.contentlet.model.Contentlet;
 import com.dotmarketing.portlets.contentlet.model.IndexPolicy;
 import com.dotmarketing.portlets.fileassets.business.FileAsset;
 import com.dotmarketing.portlets.fileassets.business.FileAssetAPI;
 import com.dotmarketing.portlets.fileassets.business.IFileAsset;
+import com.dotmarketing.portlets.folders.business.FolderAPI;
 import com.dotmarketing.portlets.folders.model.Folder;
+import com.dotmarketing.portlets.htmlpageasset.business.HTMLPageAssetAPI;
+import com.dotmarketing.portlets.htmlpageasset.business.HTMLPageAssetAPIImpl;
 import com.dotmarketing.portlets.htmlpageasset.model.HTMLPageAsset;
 import com.dotmarketing.portlets.htmlpageasset.model.IHTMLPage;
 import com.dotmarketing.portlets.languagesmanager.model.Language;
+import com.dotmarketing.portlets.links.factories.LinkFactory;
+import com.dotmarketing.portlets.links.model.Link;
 import com.dotmarketing.portlets.templates.model.Template;
 import com.dotmarketing.util.Config;
+import com.dotmarketing.util.InodeUtils;
 import com.dotmarketing.util.PageMode;
 import com.dotmarketing.util.UtilMethods;
 import com.liferay.portal.model.User;
@@ -42,11 +38,6 @@ import com.liferay.util.FileUtil;
 import com.tngtech.java.junit.dataprovider.DataProvider;
 import com.tngtech.java.junit.dataprovider.DataProviderRunner;
 import com.tngtech.java.junit.dataprovider.UseDataProvider;
-import java.io.File;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import javax.servlet.http.HttpServletRequest;
 import org.apache.commons.beanutils.BeanUtils;
 import org.apache.velocity.tools.view.context.ViewContext;
 import org.junit.AfterClass;
@@ -56,6 +47,19 @@ import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.MethodSorters;
 import org.mockito.Mockito;
+
+import javax.servlet.http.HttpServletRequest;
+import java.io.File;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.stream.Collectors;
+
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertTrue;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 /**
  * NavToolTest
@@ -70,6 +74,12 @@ public class NavToolTest extends IntegrationTestBase{
     private static User user;
     private static Host site;
     private static Language spanishLanguage;
+    private static IdentifierAPI identifierAPI;
+    private static VersionableAPI versionableAPI;
+    private static FolderAPI folderAPI;
+
+    private static ContentletAPI contentletAPI;
+
 
     @BeforeClass
     public static void prepare() throws Exception {
@@ -79,6 +89,10 @@ public class NavToolTest extends IntegrationTestBase{
         user = APILocator.getUserAPI().getSystemUser();
         site = new SiteDataGen().nextPersisted();
         spanishLanguage = TestDataUtils.getSpanishLanguage();
+        identifierAPI    = APILocator.getIdentifierAPI();
+        versionableAPI   = APILocator.getVersionableAPI();
+        folderAPI     = APILocator.getFolderAPI();
+        contentletAPI = APILocator.getContentletAPI();
     }
 
     @AfterClass
@@ -287,13 +301,13 @@ public class NavToolTest extends IntegrationTestBase{
         fileAssetInSpanish.setLanguageId(spanishLanguage.getId());
 
         final NavToolTestCase case1 = new NavToolTestCase();
-        case1.menuItems = Collections.singletonList(fileAssetInSpanish);
+        case1.menuItems = List.of(fileAssetInSpanish);
         case1.itemFile = fileAssetInSpanish;
         case1.selectedLang = 1L;
         case1.expectedResult = false;
 
         final NavToolTestCase case2 = new NavToolTestCase();
-        case2.menuItems = Collections.singletonList(fileAssetInSpanish);
+        case2.menuItems = List.of(fileAssetInSpanish);
         case2.itemFile = fileAssetInSpanish;
         case2.selectedLang = spanishLanguage.getId();
         case2.expectedResult = false;
@@ -305,13 +319,13 @@ public class NavToolTest extends IntegrationTestBase{
         fileAssetInEnglish.setLanguageId(1);
 
         final NavToolTestCase case3 = new NavToolTestCase();
-        case3.menuItems = Collections.singletonList(fileAssetInEnglish);
+        case3.menuItems = List.of(fileAssetInEnglish);
         case3.itemFile = fileAssetInSpanish;
         case3.selectedLang = 1L;
         case3.expectedResult = false;
 
         final NavToolTestCase case4 = new NavToolTestCase();
-        case4.menuItems = Collections.singletonList(fileAssetInSpanish);
+        case4.menuItems = List.of(fileAssetInSpanish);
         case4.itemFile = fileAssetInEnglish;
         case4.selectedLang = spanishLanguage.getId();
         case4.expectedResult = false;
@@ -422,40 +436,42 @@ public class NavToolTest extends IntegrationTestBase{
     }
 
     @Test
-    public void testNavTool_rootLevel_returnItemsOnlyForSite() throws Exception
-    {
+    public void testNavTool_rootLevel_returnItemsOnlyForSite() throws Exception {
         //Get SystemFolder
         final Folder systemFolder = APILocator.getFolderAPI().findSystemFolder();
-
         //Create new Host
-        final Host newHost1 = new SiteDataGen().nextPersisted();
+        final Host newSite1 = new SiteDataGen().nextPersisted();
 
-        //Create contentlets on one host
+        //Create contentlets on Test Site 1
         final File file = File.createTempFile("fileTestEngTrue", ".txt");
         FileUtil.write(file, "helloworld");
         final Contentlet fileAssetOneHost = new FileAssetDataGen(systemFolder, file)
-                .host(newHost1).setProperty(FileAssetAPI.SHOW_ON_MENU, "true").nextPersisted();
+                .host(newSite1).setProperty(FileAssetAPI.SHOW_ON_MENU, "true").nextPersisted();
+        fileAssetOneHost.setIndexPolicy(IndexPolicy.FORCE);
         final Template template = new TemplateDataGen().nextPersisted();
         final Contentlet pageAssetOneHost = new HTMLPageDataGen(systemFolder, template)
-                .showOnMenu(true).host(newHost1).nextPersisted();
+                .showOnMenu(true).host(newSite1).nextPersisted();
+        pageAssetOneHost.setIndexPolicy(IndexPolicy.FORCE);
         ContentletDataGen.publish(pageAssetOneHost);
         ContentletDataGen.publish(fileAssetOneHost);
 
         //Create new Host
-        final Host newHost2 = new SiteDataGen().nextPersisted();
+        final Host newSite2 = new SiteDataGen().nextPersisted();
 
-        //Create contentlets on default host
+        //Create contentlets on Test Site 2
         final Contentlet fileAssetNewHost = new FileAssetDataGen(systemFolder, file)
-                .host(newHost2).setProperty(FileAssetAPI.SHOW_ON_MENU, "true").nextPersisted();
+                .host(newSite2).setProperty(FileAssetAPI.SHOW_ON_MENU, "true").nextPersisted();
+        fileAssetNewHost.setIndexPolicy(IndexPolicy.FORCE);
         final Contentlet pageAssetNewHost = new HTMLPageDataGen(systemFolder, template)
-                .showOnMenu(true).host(newHost2).nextPersisted();
+                .showOnMenu(true).host(newSite2).nextPersisted();
+        pageAssetNewHost.setIndexPolicy(IndexPolicy.FORCE);
         ContentletDataGen.publish(pageAssetNewHost);
         ContentletDataGen.publish(fileAssetNewHost);
 
-        NavResult navResult = new NavTool().getNav(newHost2, systemFolder.getPath());
+        final NavResult navResult = new NavTool().getNav(newSite2, systemFolder.getPath());
         assertNotNull(navResult);
-        assertEquals(2,navResult.getChildren().size());
-
+        assertEquals("NavTool should return 2 results (test page and file) for 'newSite2'", 2,
+                navResult.getChildren().size());
     }
 
     /**
@@ -547,8 +563,7 @@ public class NavToolTest extends IntegrationTestBase{
 
     @Test
     @UseDataProvider("editAndPreviewModes")
-    public void Test_Render_Menu_Items_On_Edit_Mode_Page_Mode(final PageMode pageMode) throws Exception{
-
+    public void Test_Render_Menu_Items_On_Edit_Mode_Page_Mode(final PageMode pageMode) throws Exception {
         final User mockedUSer = mock(User.class);
         Mockito.when(mockedUSer.isBackendUser()).thenReturn(true);
 
@@ -561,7 +576,7 @@ public class NavToolTest extends IntegrationTestBase{
         final ViewContext viewContext = mock(ViewContext.class);
         when(viewContext.getRequest()).thenReturn(request);
 
-        final NavTool navTool =  new NavTool();
+        final NavTool navTool = new NavTool();
         navTool.init(viewContext);
 
         final Host site = new SiteDataGen().nextPersisted();
@@ -577,17 +592,36 @@ public class NavToolTest extends IntegrationTestBase{
         APILocator.getContentletAPI().publish(pageAsset2, user, true);
 
         final NavResult navResult1 = navTool.getNav(site, folder.getPath());
-        assertNotNull(navResult1);
+        assertNotNull("There must be a valid NavResult object", navResult1);
         final List<? extends NavResult> children1 = navResult1.getChildren();
         assertEquals("Both items should appear in the nav result as they're both published. ",2,children1.size());
         APILocator.getContentletAPI().unpublish(pageAsset2, user, true);
-        assertFalse(pageAsset2.isLive());
+        assertFalse("Test HTML Page '" + pageAsset2.getTitle() + "' cannot be live at this point", pageAsset2.isLive());
 
         final NavResult navResult2 = navTool.getNav(site, folder.getPath());
         final List<? extends NavResult> children2 = navResult2.getChildren();
-        assertEquals("Now 2 items should appear in the nav result as we are simulating rendering on Edit mode ",2, children2.size());
-        assertEquals(children2.get(0).getTitle(), pageAsset1.getTitle());
-        assertEquals(children2.get(1).getTitle(), pageAsset2.getTitle());
+        assertEquals("Now 2 items should appear in the nav result as we are simulating rendering on Edit mode ", 2,
+                children2.size());
+        List<NavResult> found = children2.stream().filter(navResult -> {
+            try {
+                return navResult.getTitle().equalsIgnoreCase(pageAsset1.getTitle());
+            } catch (final Exception e) {
+                throw new RuntimeException("Title property in NavResult ' " + navResult + " ' could not be retrieved"
+                        , e);
+            }
+        }).collect(Collectors.toList());
+        assertFalse("Test HTML Page '" + pageAsset1.getTitle() + "' was not found in the list of NavResults",
+                found.isEmpty());
+        found = children2.stream().filter(navResult -> {
+            try {
+                return navResult.getTitle().equalsIgnoreCase(pageAsset2.getTitle());
+            } catch (final Exception e) {
+                throw new RuntimeException("Title property in NavResult ' " + navResult + " ' could not be retrieved"
+                        , e);
+            }
+        }).collect(Collectors.toList());
+        assertFalse("Test HTML Page '" + pageAsset2.getTitle() + "' was not found in the list of NavResults",
+                found.isEmpty());
     }
 
     @DataProvider
@@ -625,5 +659,73 @@ public class NavToolTest extends IntegrationTestBase{
         assertNotNull(navResult);
         assertEquals(1,navResult.getChildren().size());
         assertEquals("SPA Version", navResult.getChildren().get(0).getTitle());
+    }
+
+    /**
+     * Method to test: NavTool.getNav
+     * Given scenario: get navigation of a folder, where it contains published and unpublished links
+     * Expected result: getting the navigation must return only the published links
+     * @throws Exception exception
+     */
+    @Test
+    public void test_getNav_GivenLinkItems_ShouldOnlyShowLiveLinksLiveMode() throws Exception {
+        final Host host = new SiteDataGen().nextPersisted();
+        final NavTool navTool = new NavTool();
+        final User mockedUSer = mock(User.class);
+        final HttpServletRequest request = mock(HttpServletRequest.class);
+        when(request.getParameter(com.dotmarketing.util.WebKeys.PAGE_MODE_PARAMETER)).thenReturn(PageMode.LIVE.toString());
+        when(request.getAttribute(com.liferay.portal.util.WebKeys.USER)).thenReturn(APILocator.systemUser());
+        HttpServletRequestThreadLocal.INSTANCE.setRequest(request);
+
+        final ViewContext viewContext = mock(ViewContext.class);
+        when(viewContext.getRequest()).thenReturn(request);
+        navTool.init(viewContext);
+        //Create Folder
+        folder = new FolderDataGen().site(site).title("test").showOnMenu(true).nextPersisted();
+
+        //Add create two links with different states
+        final Link publishLink = new LinkDataGen().hostId(host.getIdentifier()).title("testPublish").parent(folder).target("https://google.com").linkType("INTERNAL").showOnMenu(true).nextPersisted();
+        APILocator.getVersionableAPI().setLive(publishLink);
+
+        final Link unpublishLink = new LinkDataGen().hostId(host.getIdentifier()).title("testUnpublish").parent(folder).target("https://google.com").linkType("INTERNAL").showOnMenu(true).nextPersisted();
+
+        final NavResult navResult1 = navTool.getNav(site, folder.getPath());
+        assertNotNull("There must be a valid NavResult object", navResult1);
+        assertEquals("Only only one item should appear in the nav result. ",1,navResult1.getChildren().size());
+    }
+
+    /**
+     * Method to test: NavTool.getNav
+     * Given scenario: get navigation of a folder, where it contains published and unpublished links
+     * Expected result: getting the navigation must return published and unpublished links
+     * @throws Exception exception
+     */
+    @Test
+    public void test_getNav_GivenLinkItems_ShouldOnlyShowLinksEditMode() throws Exception {
+
+        final Host host = new SiteDataGen().nextPersisted();
+        final NavTool navTool = new NavTool();
+        final User mockedUSer = mock(User.class);
+        final HttpServletRequest request = mock(HttpServletRequest.class);
+        when(request.getParameter(com.dotmarketing.util.WebKeys.PAGE_MODE_PARAMETER)).thenReturn(PageMode.EDIT_MODE.toString());
+        when(request.getAttribute(com.liferay.portal.util.WebKeys.USER)).thenReturn(APILocator.systemUser());
+        HttpServletRequestThreadLocal.INSTANCE.setRequest(request);
+
+        final ViewContext viewContext = mock(ViewContext.class);
+        when(viewContext.getRequest()).thenReturn(request);
+        navTool.init(viewContext);
+
+        //Create Folder
+        folder = new FolderDataGen().site(site).title("test").showOnMenu(true).nextPersisted();
+
+        //Add create two links with different states
+        final Link publishLink = new LinkDataGen().hostId(host.getIdentifier()).title("testPublish").parent(folder).target("https://google.com").linkType("INTERNAL").showOnMenu(true).nextPersisted();
+        APILocator.getVersionableAPI().setLive(publishLink);
+
+        Link unpublishLink = new LinkDataGen().hostId(host.getIdentifier()).title("testUnpublish").parent(folder).target("https://google.com").linkType("INTERNAL").showOnMenu(true).nextPersisted();
+
+        final NavResult navResult1 = navTool.getNav(site, folder.getPath());
+        assertNotNull("There must be a valid NavResult object", navResult1);
+        assertEquals("Both items should appear in the nav result. ",2,navResult1.getChildren().size());
     }
 }
