@@ -1,16 +1,18 @@
 package com.dotmarketing.portlets.workflows.model;
 
-import java.net.URLEncoder;
-import java.util.List;
-import java.util.Map;
-
 import com.dotmarketing.business.APILocator;
 import com.dotmarketing.common.util.SQLUtil;
 import com.dotmarketing.exception.DotDataException;
 import com.dotmarketing.util.UtilMethods;
 import com.liferay.portal.model.User;
 
-public class WorkflowSearcher {
+import java.io.Serializable;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.util.List;
+import java.util.Map;
+
+public class WorkflowSearcher implements Serializable {
 
 	String schemeId;
 	String assignedTo;
@@ -83,7 +85,7 @@ public class WorkflowSearcher {
 			} else {
 				y = obj.toString();
 			}
-			return new Boolean(y);
+			return Boolean.valueOf(y);
 		} catch (Exception e) {
 
 		}
@@ -225,7 +227,7 @@ public class WorkflowSearcher {
 				+ "&stepId=" + UtilMethods.webifyString(stepId) 
 				+ "&open=" + open 
 				+ "&closed=" + closed 
-				+ "&keywords=" + URLEncoder.encode(UtilMethods.webifyString(keywords))
+				+ "&keywords=" + URLEncoder.encode(UtilMethods.webifyString(keywords), StandardCharsets.UTF_8)
 				+ "&orderBy=" + orderBy 
 				+ "&count=" + count
 				+ ((show4all) ? "&show4all=true" : "")
